# hass-temperature-map

./: .gitignore  .gitmodules  CLAUDE.md  HA_INTEGRATION_GUIDE.md  PLAN.md  README.md  hacs.json  instructions.md  pyproject.toml
.github/workflows/: ci.yml
custom_components/temperature_map/: __init__.py  config_flow.py  const.py  coordinator.py  image.py  manifest.json  services.yaml  strings.json
custom_components/temperature_map/heatmap/: __init__.py  distance.py  geometry.py  renderer.py  temperature.py  types.py
custom_components/temperature_map/www/: temperature-map-overlay.js
tests/: __init__.py  conftest.py  test_config_flow.py  test_coordinator.py  test_distance.py  test_geometry.py  test_options_flow.py  test_temperature.py
www/: temperature-map-overlay.js
